# ChangeLog for sys-apps/acl
# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sys-apps/acl/ChangeLog,v 1.119 2013/02/19 05:08:46 zmedico Exp $

  19 Feb 2013; Zac Medico <zmedico@gentoo.org> acl-2.2.51.ebuild:
  Add ~arm-linux keyword.

  29 Dec 2011; Mark Loeser <halcy0n@gentoo.org> acl-2.2.51.ebuild:
  Stable for ppc64; bug #379057

  03 Sep 2011; Raúl Porcel <armin76@gentoo.org> acl-2.2.51.ebuild:
  alpha/ia64/m68k/s390/sh/sparc stable wrt #379057

  01 Sep 2011; Jeroen Roovers <jer@gentoo.org> acl-2.2.51.ebuild:
  Stable for HPPA (bug #379057).

  28 Aug 2011; Markus Meier <maekke@gentoo.org> acl-2.2.51.ebuild:
  arm stable, bug #379057

  21 Aug 2011; nixnut <nixnut@gentoo.org> acl-2.2.51.ebuild:
  ppc stable #379057

  21 Aug 2011; Pawel Hajdan jr <phajdan.jr@gentoo.org> acl-2.2.51.ebuild:
  x86 stable wrt bug #379057

  14 Aug 2011; Markos Chandras <hwoarang@gentoo.org> acl-2.2.51.ebuild:
  Stable on amd64 wrt bug #379057

  16 May 2011; Mike Frysinger <vapier@gentoo.org> acl-2.2.51.ebuild,
  +files/acl-2.2.51-config-shell.patch:
  Fix building when /bin/sh is not functional enough #365397 by Piotr
  Karbowski.

*acl-2.2.51 (29 Apr 2011)

  29 Apr 2011; Mike Frysinger <vapier@gentoo.org> +acl-2.2.51.ebuild:
  Version bump.

*acl-2.2.49-r1 (15 Apr 2011)

  15 Apr 2011; Diego E. Pettenò <flameeyes@gentoo.org> +acl-2.2.49-r1.ebuild:
  Revision bump: port to EAPI=4, drop prepalldocs, add static-libs USE flag,
  drop .la files if static-libs are disabled.

  02 Apr 2010; Raúl Porcel <armin76@gentoo.org> acl-2.2.49.ebuild:
  alpha/ia64/m68k/s390/sh/sparc stable wrt #298067

  01 Apr 2010; Jeroen Roovers <jer@gentoo.org> acl-2.2.49.ebuild:
  Stable for HPPA (bug #298067).

  31 Mar 2010; Brent Baude <ranger@gentoo.org> acl-2.2.49.ebuild:
  Marking acl-2.2.49 ppc64 for bug 308049

  31 Mar 2010; Brent Baude <ranger@gentoo.org> acl-2.2.49.ebuild:
  Marking acl-2.2.49 ppc for bug 308049
