@@ -4,17 +4,29 @@ Hash: SHA256
 AUX acl-2.2.49-quote-strchr.patch 657 SHA256 d172b07ae4ccb4c8da95f90cc836075e6e582b3b57e029987e4197e58f5daf15 SHA512 42a31f38e0d03c6632f59f9e4fd2ba65405b3d29c9e99095a30d7674627dd140cec6c01bd677ef980e238669f39eed69e4eb8651cd3c04d48a23306dab760624 WHIRLPOOL dea4b8bdf6b67b97efebfad7cc1be3d4f058c4afdc05786c4edda217178ee3758f93f6931979ec2711b5531cc4b908c7f9c2b50e2c9ddc651e609105fc042e4f
 AUX acl-2.2.51-config-shell.patch 1497 SHA256 fcbb60deee675d265b9cba618ce82df7c3093efdfca3489dd2aacf73fc98d076 SHA512 77a4df625cb566c5250789a45cc1e695ba40c6d1aac103b332ee0f4a9c37f64bdb96d223722eb0a2d4a3a394ce030e04c3ffdcd35bf7e88564f9cde63e67b9fa WHIRLPOOL 153a348e7e2260808bcb95d2b867004236762d613b1c1e0fe94c46743431ccb6a3b069a06a6cf7985de6e468b2c490b09e8597fc3f84accefaac38c6f44d4f8b
 DIST acl-2.2.42-CITI_NFS4_ALL-2.dif 97276 SHA256 10c930e4c6d147d03ad6dc67e38663522fd277525c149d932a8279e2cbe1b95e
-DIST acl-2.2.49.src.tar.gz 362743 SHA256 b9c7f4752e4ef4930a62fa5aa0d7efe1cba2b5a3a2d6ee2b45c0a70c72b7e5d5
+DIST acl-2.2.49.src.tar.gz 362743 SHA256 b9c7f4752e4ef4930a62fa5aa0d7efe1cba2b5a3a2d6ee2b45c0a70c72b7e5d5 SHA512 c65b1ca18c16e434f1ff5b196908d1c39d62399740826a4a9b3ef0e6ba5cc4fced838b4a844ccffc5cb26554c4755b2f4e0fd69c9045d692f9019972ce3f7f0b WHIRLPOOL 028f373f334700896b8c455f41a9f83dc6da82a6454da9da81a98e05f5f058ee88d0b1487f97e9d5b7c204a97ed125fc331bdcce6cb454ddbfbe9eeb6de0a55c
 DIST acl-2.2.51.src.tar.gz 385378 SHA256 06854521cf5d396801af7e54b9636680edf8064355e51c07657ec7442a185225 SHA512 32b0c7f5aff27b1a0278dea2cc7aacf03f791c5bd7e9ae520bf29516bf3e52969c0a7ce9af3c2fa95b222cc70d4e19da167d008dcdf0fb46bda86cd584c96d98 WHIRLPOOL 0c41e39008c0bbb254d3ca29dc597e888d0a76820d8f78246ae06448ea5fdf9d25b54c112d86137420007641d23e172c67402d05acdc34af5b6b387b32c290a2
+DIST acl-2.2.52.src.tar.gz 386604 SHA256 179074bb0580c06c4b4137be4c5a92a701583277967acdb5546043c7874e0d23 SHA512 59973199d371cd0b2368e95bc829a1b47f04e808a174fefba4c6854e766158bd19a71d9dbcc8d6fdc1573a1f971cdda39c453f7fa243bce02c1ab97c6e7c72e7 WHIRLPOOL 19bcc46e56ce0226e084bb6f86e411b09418d53f094f478afd60c3c568cf2066d9f0352a4da20f6f41d6e08c13412a182a7306aa3fbe2a248d1f6388856f63a2
 EBUILD acl-2.2.49-r1.ebuild 1897 SHA256 16eefd23183fa09115300c878491cb51c882b61d481a43862b6a1a9fd4c75f56 SHA512 b09e30cdf65e2211ff4e3369bde20a7812616ecbed61d2054b8c1b5a07de5c3a1084a78b3bea7d27d4549adea9048f5cf65ebc0e8339e4071b7177724eeba74b WHIRLPOOL d84b6c89cb57eadfa133fa5a461633500e93822a8b4693be31ab0f6443c1b5e66a826629b1a01e933217a3dc8b4acaed9bc81aac66d84f60b1f03c6815da1c23
 EBUILD acl-2.2.49.ebuild 1838 SHA256 6795b9767a3144983c2c03e787c40cb925bc9f901634e995e977ee9642acdae2 SHA512 b377d5651733b98d66e6d5f6810792d3fcbce6053cf4a19270b3cc3d626c8abe8640a1527e029abeadb47957e251867c6f614bd345ecfbc320fccf099b6b383c WHIRLPOOL 821bb4f5b5423474412845f3c6b987c185e7fd642d7f07f7de10c807321f49551585137140f0b41ae8a0110a6521256f243ba2cb2aeaacae2ed9a238bac5e429
 EBUILD acl-2.2.51.ebuild 1964 SHA256 9ee5ffc0b903e4acc23b01ff580451d72f8cea31f27749fb6f9261e494442abb SHA512 d208881c9b85929e69721356166ee9674e295a10f04dc3ffeef5c106777c898ae772efdabfa3a0be7a867d97b2e80290ede51baba7c9e57bb0e7a11a523b60cd WHIRLPOOL daf5e68de751d59dff10cb413699ec43187854b5f196b3744b948fc4ccc0c24983759189d0bfb0cfbf80b1f549a3fc9e6d0f92798acbca8b514abcb233dda7fc
-MISC ChangeLog 15024 SHA256 f1eab30c8dbce4e344061a89130cb2881256936278a4d7ff85867f89977c39ea SHA512 6c2423ffb8017437e7d106f4e82e6b06958e17eab0e3aee536dc1aecd66ca78777ef91bb739a56becee20935a1cd83513987eb20e4b305b97bd2b4a54edeaa16 WHIRLPOOL f84fc4306babedd3aeade4ff59878bb9bb5d82e0a0e628e34df5f8d6769a20efa3520902cb8f401ab07378d0cfba4a2e2054d49a5826e8e3d1579fd7a30d330a
+EBUILD acl-2.2.52.ebuild 1728 SHA256 b2f3981b7d5643985484738be5604f63f7b83e062dd4829924615e612492f5ac SHA512 27d6a4f61e7ec6ee4ac55d4fb577bdb02e3ff592514a9345b12a6c3204507000774e543811ed301f70768947e2e54b5b78b8c7c9987a50c56e715b1d81eab207 WHIRLPOOL 37cf96771df9d4acaba4abcec69b9369907204a3b09d7021b80eae40fd0b1a63e90d78811f091d057ecdb64af4ee13ebe3ca1c794b7c47e3c0536e6b3badbdb0
+MISC ChangeLog 15137 SHA256 9ac3b804e279983e90d22f89fb1d0fb87c773199e00fd3885727e06436e4c68b SHA512 0a5d432ea2c316c19ccf0f1b1eb708ddae3ba8e9417c5c5e7362e842f2e6d95e5cb4f1f940f3e3cc73cd192d12277953860233b3000af546ba568ec6e11cb84a WHIRLPOOL 6aefd31ea127f08144c34b44b15ff9590d9aaf09d5b9156eec744f75202eaa58dc4cbe723d7018574db800da75c6b07909efd6f6ff0d3a4b5c03b0e89ece25c4
 MISC metadata.xml 232 SHA256 441f653b762deb6e3674d915c6762f28b9e60f3887628e953df603634acd87ad SHA512 e5ca7444568280a11f8208f30b0f693cc4f44d259e5750340cd4389fe00ac29a03bdcb5807adffab456812fd544e1243fdfb1d4bc6daeff0e81c7471d4845a25 WHIRLPOOL 9c514b846528756fbe93810de0fa9beec29f393bb72c93b735e739e93e106b53d6a19d3e7d9aac6741e5d3dad17ae7610c2e349d5f6fa35208bac8c574bb1c5c
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.19 (GNU/Linux)
 
-iEYEAREIAAYFAlEjCN8ACgkQ/ejvha5XGaP7hwCeLs4ONR3tcOWmkog9+qbxAr2Z
-ofgAoLkN4kvH/GGSkFUiP0Q2k1MErpIu
-=5tze
+iQIcBAEBCAAGBQJRmmONAAoJELEHsLL7fEFWohMP/RwLEdVSu1x3Bb5UKHNTTWZA
+WSVTzrF1FRTJlIrEJ83hcpSig+lB9eLgwEZglMRr+NK3zDi73QXW2sPUEZP4zwjZ
+P7WpxRKZ4wfZhFsEMlGTihAr81pcoBRChLWvl7JrvmL2bN3qqYiOSzmFuOxB/b1x
+GuEx09TGUkvlepnvbfwjcNNzA5sugw2xWKDq5n9yPx9ia4DWvUlK7t63xhzb6VyY
+Uux8r7uDONqxjA8wnMRLz/iYfMWu2n8t5mtYb08B9PcluakJtPN7Vze3tF77fQmW
+LxDH9xlyJzuhDZ4dXg2TP9I69nV/WfLno5Po1Y4GvhgPLeWNRKMnOAPFBZ/siVFp
+hk7HNCpociZgWATZj01/GaqhEcJ3KhTjZPGCCIhS+WVvQMcappNrjYF7gZMeNgTq
+O2/obffW9JLNlTOjOnrt0F1YzKLbYyLec/S//CPZzvvDXOO/n1yFOKx4GMTuXWfv
+GQDRAyUo7pFVU+veLWpuCLt47pxQ2XmCRNVg1c64SQt+POeYAnG8/z6k/V2fkO79
+pLkgo8drt0+2Zh4/TDJ1mDmwXBcqvEDGufX6WKSaKSswfvJ7S40CUnS3NpVNBQMt
+y4rdE+sUzTXi/+TKVyG68WNmo1/n6BW2xhaHp3VKsm1tB/SU5oMceECDHvmYMvCO
+FGU8Y+k/D3tIVGYQ9C0X
+=6Jue
 -----END PGP SIGNATURE-----
