@@ -1,6 +1,11 @@
 # ChangeLog for sys-apps/acl
 # Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-apps/acl/ChangeLog,v 1.119 2013/02/19 05:08:46 zmedico Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-apps/acl/ChangeLog,v 1.120 2013/05/20 17:55:21 vapier Exp $
+
+*acl-2.2.52 (20 May 2013)
+
+  20 May 2013; Mike Frysinger <vapier@gentoo.org> +acl-2.2.52.ebuild:
+  Version bump.
 
   19 Feb 2013; Zac Medico <zmedico@gentoo.org> acl-2.2.51.ebuild:
   Add ~arm-linux keyword.
